# Scholomance-V12

./: .VAELRIX_LAW.md.kate-swp  .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCH_CONTRACT_OVERLAY_INTEGRITY.md  CLAUDE.md  CODEX.md  CURSOR.md  Dockerfile  ENGINEERING_RULEBOOK.md  GEMINI.md  GROK.md  MCP_INTEGRATION_GUIDE.md  README.md  SCHEMA_CONTRACT.md  SHARED_PREAMBLE.md  TODO.md  UNITY.md  VAELRIX_LAW.md  _diag-slice2.mjs  _drive-slice2.mjs  _shot.mjs  _shot2.mjs  animate_chest.lua  animate_chest_idle.lua  apply_amps_to_chest.js  avsync-tmp.mjs  brute_force.c  copy_rig.cjs  copy_rig.js  copy_setup.cjs  daydreaming-nightmares.scholovid.json  dead-code.md  debug-dom.html  debug-truesight.js  debug_truesight.test.js  (+102 more)
.antigravitycli/: b2f09919-7297-4570-b9ab-eed2f5726e20.json
.claude/: settings.json
.cursor/: mcp.json
.grok/: config.toml
.qwen/: settings.json
.tmp/: analyze_barrel.mjs  check-sunflower.mjs  extract-sunflower-only.mjs  import-and-export-aseprite.mjs  import-aseprite-morph.mjs  inspect-bezel.mjs  inspect-shadow.mjs  inspect-silhouette.mjs  morph-sunflower.mjs  patch-aseprite.mjs  png-to-aseprite.mjs  polish-sunflower.mjs  polish_barrel.mjs  recover_barrel.mjs  refine_barrel.mjs  refine_barrel_details.mjs  test-poly.mjs  tq-search.mjs  void-ice-reprise.mjs
Instruction Manuals/: Remote Collab Plane Access.md
PIXELBRAIN features/: PIXELBRAIN-FEATURES.md
benchmarks/: g2pJury.benchmark.js  g2pJuryLatency.mjs  g2pJuryMemory.mjs
character-forge/: build-directions.mjs  forge-character.mjs  render-fills.mjs  skeleton.mjs  verify-grid.mjs  view-frames.mjs  zoom-face.mjs
codex/core/manifold/: Cargo.toml  MANIFOLD_WHITEPAPER.md  UI  factory-presets.js  index.js
codex/core/manifold/manifold-core/: Cargo.toml  README.md
codex/core/manifold/manifold-core/src/: api.rs  bytecode.rs  classifier.rs  error.rs  features.rs  lib.rs  params.rs  rng.rs  safety.rs  vm.rs
codex/core/manifold/manifold-core/src/dsp/: bloom.rs  delayline.rs  early.rs  fdn.rs  graph.rs  mod.rs  modulation.rs  renderer.rs  splitter.rs  spray.rs  wall_filter.rs
codex/core/manifold/manifold-core/tests/: bytecode_abi.rs  determinism.rs  torture.rs
codex/core/manifold/manifold-core/tests/fixtures/: ash-lung.bytecode.json  cathedral-of-teeth.bytecode.json  ice-circuit.bytecode.json  substrate-maw.bytecode.json  void-glass.bytecode.json
codex/core/manifold/manifold-plugin/: .gitignore  Cargo.toml  README.md
codex/core/manifold/manifold-plugin/src/: lib.rs  meter.rs  presets.rs
codex/core/manifold/manifold-plugin/src/editor/: mod.rs  state.rs  theme.css  tokens.rs
codex/core/manifold/manifold-plugin/src/editor/kit/: knob.rs  manifold_map.rs  meter.rs  mod.rs  panel_card.rs  preset_chip.rs  status_dot.rs  toggle_tile.rs
codex/core/manifold/manifold-wasm/: Cargo.toml
codex/core/manifold/manifold-wasm/pkg/: manifold_wasm.d.ts  manifold_wasm.js  manifold_wasm_bg.wasm  manifold_wasm_bg.wasm.d.ts  package.json
codex/core/manifold/manifold-wasm/src/: lib.rs
codex/core/manifold/rust-kernel/: Cargo.toml
codex/core/manifold/rust-kernel/pkg/: manifold_kernel.d.ts  manifold_kernel.js  manifold_kernel_bg.wasm  manifold_kernel_bg.wasm.d.ts  package.json
codex/core/manifold/rust-kernel/src/: lib.rs
dict_data/: README.md
divtube_downloader/: .env.example  .gitignore  .mcp.json  .mother-codebase-instructions.md.kate-swp  CHANGELOG.md  INSTRUCTION_MANUAL.md  JSON_STRUCTURE_WHITEPAPER.md  README_TUI.md  SCHOLOMANCE_COMMANDS.md  SCHOLOMANCE_FEEDBACK_REPORT.md  VAELRIX_MANUAL.md  _env.py  _vectorizeAndQuantizeSCD(scdFull, meta =  brain_daemon.out  bug  build.gradle  build_oov_lexicon.mjs  build_youtube_intel.py  commentary.nichepack  create_music_video_pack.py  embeddings.js  list_models.py  mother-codebase-instructions.md  music-videos.goldenpack  music.nichepack  opencode.json  right-or-wrong?  run.sh  scd64_plugin.js  test_content.json  test_critique.py  test_harness.py  test_key.py  test_paste.py  test_tools.py  tests_textarea.py  turboquant_plugin.js  turboquant_registry.json  turbovec.js  youtube-analysis-DQY-tRnHGCU-20260622-062748.json  (+2 more)
docs/: UI 2  audit1.md  dev-tools.md
end-of-day-results/: EOD-2026-04-26.md
forensic-search/: SKILL.md
godot_project/: debug.txt  project.godot  test_mining_hypothesis.gd
literary_gpt/: README.md  requirements.txt
lyrics/: Daydreaming-Nightmares.txt
mudlet/: README.md  erhud.mpackage  vaelrix.mpackage
nlp_chatbot/: README.md  chatbot-app  requirements.txt
public/: _redirects  (+3 more)
src/lib/math/quantization/rust-kernel/: Cargo.toml
src/lib/math/quantization/rust-kernel/pkg/: turboquant_bridge.js
src/lib/math/quantization/rust-kernel/src/: lib.rs
vst/scholo-candy/: Cargo.toml  ScholoCandy.iss  install.bat  install.sh  scholo-candy-eq.schema.json
vst/scholo-candy/golden/: error_tolerance.md  generate_golden_fixtures.cjs  web_eq_snapshots.json
vst/scholo-candy/golden/factory_scrolls/: alchemy_transmute.scroll.json  neutral_baseline.scroll.json  psychic_schism.scroll.json  sonic_harmony.scroll.json  void_undertow.scroll.json  will_focus.scroll.json
vst/scholo-candy/src/: bands.rs  lib.rs  params.rs  plugin.rs
vst/scholo-candy/src/dsp/: analyzer.rs  codec.rs  filter_band.rs  mod.rs  ms.rs  oversample.rs
vst/scholo-candy/src/dsp/topology/: mod.rs  rbj.rs  tilt.rs  tpt_svf.rs
vst/scholo-candy/src/editor/: band_node.rs  history.rs  inspector.rs  layout.rs  mod.rs  preset_browser.rs  theme.rs  ui.rs
vst/scholo-candy/tests/: dsp_parity.rs  oversampler_gain.rs  preset_codec.rs
vst/scholo-candy/tests/qa/: no_codegen.py
vst/scholo-candy/ui/: package-lock.json
(+4217 files in other folders)
