[workspace]
members = ["xtask"]

[package]
name = "scholo_candy"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base32 = "0.4.0"
sha2 = "0.10.6"
crc32fast = "1.3.2"
hex = "0.4.3"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.27.0"

[lib]
name = "scholo_candy"
crate-type = ["cdylib", "rlib"]
