# Cochlear Manifold Rust workspace (sub-project 2).
# `manifold-core` is the pure DSP engine; `manifold-wasm` is its thin browser
# wrapper. The pre-existing `rust-kernel/` skeleton is intentionally excluded.
[workspace]
resolver = "2"
members = ["manifold-core", "manifold-wasm"]
# `manifold-plugin` (nih-plug VST3/CLAP) and the old `rust-kernel` build
# standalone, outside this workspace, so their heavy/optional toolchains never
# gate `cargo test` on the core + wasm crates.
exclude = ["rust-kernel", "manifold-plugin"]

[profile.release]
opt-level = "s"
lto = true
