[package]
name = "manifold-plugin"
version = "0.1.0"
edition = "2021"
description = "Cochlear Manifold native VST3/CLAP plugin (nih-plug wrapper with a vizia editor behind the default `gui` feature)."

[lib]
# `cdylib` for the VST3/CLAP exports; `lib` so the nih-plug xtask bundler can
# link the crate.
crate-type = ["cdylib", "lib"]

[features]
default = ["gui"]
gui = ["dep:nih_plug_vizia"]
# No-op: nih_plug's own `vst3` exporter feature is already enabled
# unconditionally below. This just gives the lean validator build path
# (`--no-default-features --features vst3`) a real feature name to select.
vst3 = []

[dependencies]
manifold-core = { path = "../manifold-core" }
serde_json = "1.0"
# nih-plug has no crates.io releases; track upstream. `vst3` enables the VST3
# exporter (CLAP is always available). No standalone/GUI features => no
# X11/GL/JACK C dependencies.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23", default-features = false, features = ["vst3"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23", optional = true }

[profile.release]
opt-level = "s"
lto = "thin"
