[package]
name = "manifold-wasm"
version = "0.1.0"
edition = "2021"
description = "Thin wasm-bindgen browser wrapper over manifold-core."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
manifold-core = { path = "../manifold-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
