[package]
name = "turboquant-bridge"
version = "1.0.0"
edition = "2021"
authors = ["Scholomance Codex"]
description = "TurboQuant 2.5-bit vector quantization bridge for WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
# We will use a fast Hadamard implementation or implement the rotation manually
# The core turboquant crate would be added here if available on crates.io
# For this bridge, we implement the kernels directly to minimize deps

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small WASM size
opt-level = "s"
lto = true
